[package]
name = "license-api"
version = "0.2.11"
edition = "2024"
license = "MIT"
description = "License API client library"
repository = "https://github.com/awalki/license-api-rs"

[dependencies]
reqwest = {version = "0.12.19", features = ["json"]}
serde = { version = "1.0.219", features = ["derive"] }
machineid-rs = "1.2.4"